--- a/_templates/Master.cshtml
+++ b/_templates/Master.cshtml
@@ -3,10 +3,18 @@
 @{
     Layout = null;
     var pageScope = "s-" + Model.DocumentTypeAlias.ConvertToId();
+
+	var coverCarousel = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("coverCarousel");
+	var hasCarousel = coverCarousel != null && coverCarousel.Any();
+	var hasCover = Model.GetPropertyValue<IPublishedContent>("image") != null;
+
+	var hasHero = hasCarousel || hasCover;
+
+	var modifierClass = hasHero ? "t-has-hero js-has-hero" : "";
 }
 
 <!doctype html>
-<html lang="en-GB" class="no-js no-enhance @pageScope">
+<html lang="en-GB" class="no-js no-enhance @pageScope @modifierClass">
     <head itemscope itemtype="http://schema.org/WebSite">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
@@ -25,6 +33,8 @@
 		@Html.Partial("Modules/Footer")
         @Html.Partial("Meta/Analytics")
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+		<script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
 		<script src="/assets/js/main.js"></script>
 		@RenderSection("Scripts", required: false)
     </body>
