--- a/iCAN.Web/Views/Home.cshtml
+++ b/iCAN.Web/Views/Home.cshtml
@@ -1,18 +1,27 @@
 ﻿@using iCAN;
 @using iCAN.Core.Models;
+@using RJP.MultiUrlPicker.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
+
+	var covers = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("coverCarousel");
 }
 
 <main class="o-page__inner u-clearfix" role="main">
-
-	@Html.Partial("~/Views/Partials/Components/Cover.cshtml", new CoverViewModel {
-        Image = TGDH.Settings<IPublishedContent>("defaultFeaturedImage"),
-		Headline = "Example headline",
-		Copy = "<a href='#'>Our vision</a> is a world where all children have the communication skills they need to fulfil their potential. No child should be left out or left behind because of a difficulty speaking or understanding.",
-		Url = "#"
-    })
+	@if (covers != null && covers.Any()) {
+		foreach (var item in covers) {
+			var link = item.GetPropertyValue<Link>("link");
+			@Html.Partial("~/Views/Partials/Components/Cover.cshtml", new CoverViewModel {
+				Image = item.GetPropertyValue<IPublishedContent>("image"),
+				Headline = item.GetPropertyValue<string>("headline"),
+				Copy = item.GetPropertyValue<string>("description"),
+				Url = link.Url,
+				Target = link.Target,
+				CtaName = link.Name
+			})
+		}
+	}
 
 	<section class="o-section t-home__about">
 		<div class="o-wrap o-wrap--x-large u-clearfix">
