--- a/iCAN.Web/Views/Contact.cshtml
+++ b/iCAN.Web/Views/Contact.cshtml
@@ -1,10 +1,8 @@
-﻿@using Terratype
-@using iCAN.Forms.Models
+﻿@using iCAN.Forms.Models
 @using iCAN.Core.Models
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
-	var map = Model.GetPropertyValue<Terratype.Models.Model>("mapLocation");
 	var contacts = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("individualContactDetails");
 }
 
@@ -18,7 +16,7 @@
 			})
 		</div>
 
-		<div id="mapCanvas" class="c-map js-map u-space-bottom--large" data-location="@map.Position"></div>
+		<div id="mapCanvas" class="c-map js-map u-space-bottom--large"></div>
 
 		<div class="o-wrap o-wrap--large s-contact__cols u-clearfix">
 			<div class="s-contact__cols__col--first">
