--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -30,11 +30,13 @@
 		'objects/wrap',
 		'objects/section',
 		'objects/columns',
+		'objects/grid',
 		'objects/table',
 		'objects/forms',
 		'objects/aspect',
 		'objects/align',
 //		'objects/logos',
+		'objects/list',
 		'objects/media',
 		'objects/page-components';
 
