--- a/_assets/sass/objects/grid.scss
+++ b/_assets/sass/objects/grid.scss
@@ -8,6 +8,7 @@
 
 	.o-grid__item {
 		@include column( 1/2, $cycle: 2 );
+		margin-bottom: $line-height * 2;
 	}
 
 }
@@ -18,7 +19,7 @@
 
 		.o-grid__item {
 			@include column( 1/3, $cycle: 3 );
-			margin-bottom: 2%;
+			margin-bottom: $line-height * 2;
 		}
 
 	}
