--- a/iCAN.Web/Views/Partials/Components/HeadingFeature.cshtml
+++ b/iCAN.Web/Views/Partials/Components/HeadingFeature.cshtml
@@ -13,10 +13,10 @@
 			<h1 class="c-heading-feature__headline u-mega" itemprop="headline">@Model.Headline</h1>
 			break;
 		case "h3":
-			<h3 class="c-heading-feature__headline u-mega" itemprop="headline">@Model.Headline</h3>
+			<h3 class="c-heading-feature__headline u-alpha" itemprop="headline">@Model.Headline</h3>
 			break;
 		default:
-			<h2 class="c-heading-feature__headline u-mega" itemprop="headline">@Model.Headline</h2>
+			<h2 class="c-heading-feature__headline u-alpha" itemprop="headline">@Model.Headline</h2>
 			break;
 	}
 	@if (!String.IsNullOrWhiteSpace(Model.Subtitle)) {
