--- a/iCAN.Web/assets/css/style.css
+++ b/iCAN.Web/assets/css/style.css
@@ -671,15 +671,29 @@ html {
   padding-bottom: 4rem;
   padding-top: 4rem; }
 
+.o-section--top {
+  padding-top: 4rem; }
+
+.o-section--bottom {
+  padding-bottom: 4rem; }
+
 @media only screen and (min-width: 600px) and (max-width: 799px) {
   .o-section {
     padding-bottom: 6rem;
-    padding-top: 6rem; } }
+    padding-top: 6rem; }
+  .o-section--top {
+    padding-top: 6rem; }
+  .o-section--bottom {
+    padding-bottom: 6rem; } }
 
 @media only screen and (min-width: 800px) {
   .o-section {
     padding-bottom: 10rem;
-    padding-top: 10rem; } }
+    padding-top: 10rem; }
+  .o-section--top {
+    padding-top: 10rem; }
+  .o-section--bottom {
+    padding-bottom: 10rem; } }
 
 /* ===========================================================
 
@@ -706,6 +720,53 @@ html {
       clear: both; }
     .o-col--three .o-col:last-child {
       margin-right: 0%; } }
+
+/* ===========================================================
+
+	# Generic grid
+
+=========================================================== */
+@media only screen and (max-width: 599px) {
+  .o-grid__item {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 48.5%;
+    margin-left: 0%;
+    margin-right: 3%;
+    margin-bottom: 3.4em; }
+    .o-grid__item:before, .o-grid__item:after {
+      content: '';
+      display: table; }
+    .o-grid__item:after {
+      clear: both; }
+    .o-grid__item:nth-child(2n) {
+      margin-right: 0%;
+      float: right; }
+    .o-grid__item:nth-child(2n + 1) {
+      clear: both; } }
+
+@media only screen and (min-width: 600px) {
+  .o-grid--three .o-grid__item {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 31.3333333333%;
+    margin-left: 0%;
+    margin-right: 3%;
+    margin-bottom: 3.4em; }
+    .o-grid--three .o-grid__item:before, .o-grid--three .o-grid__item:after {
+      content: '';
+      display: table; }
+    .o-grid--three .o-grid__item:after {
+      clear: both; }
+    .o-grid--three .o-grid__item:nth-child(3n) {
+      margin-right: 0%;
+      float: right; }
+    .o-grid--three .o-grid__item:nth-child(3n + 1) {
+      clear: both; } }
 
 /* ===========================================================
 
@@ -1228,6 +1289,21 @@ html {
     margin-left: -15%; }
   .o-align--right {
     margin-right: -15%; } }
+
+/* ===========================================================
+	# List
+=========================================================== */
+.o-list--minimal {
+  list-style: none; }
+  .o-list--minimal li {
+    margin: .5rem 0;
+    word-wrap: break-word; }
+
+.o-list--inline {
+  list-style: none; }
+  .o-list--inline li {
+    display: inline-block;
+    margin: 1rem; }
 
 /* ===========================================================
 
@@ -2826,7 +2902,8 @@ img.mfp-img {
     background-color: #f7f5f2; }
 
 .c-link-list__name {
-  font-weight: 900; }
+  font-weight: 900;
+  margin-right: 1rem; }
 
 .c-link-list__meta {
   color: #000000; }
@@ -3124,7 +3201,7 @@ img.mfp-img {
 
 @media only screen and (min-width: 800px) {
   .enhance .c-map:after {
-    padding-top: 44rem; } }
+    padding-top: 50rem; } }
 
 /* ===========================================================
 
