--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -71,6 +71,7 @@
 		'components/image-mozaic',
 		'components/contact-details',
 		'components/tabs',
+		'components/listing-card',
 		'components/heading',
 		'components/sitemap';
 
