--- a/_assets/sass/components/meta-data.scss
+++ b/_assets/sass/components/meta-data.scss
@@ -4,18 +4,18 @@
 
 =========================================================== */
 
-.c-meta-data__item {
+.c-meta__item {
 	list-style: none;
 	margin: 0;
 }
 
 @include respond-min( $mq-small ) {
 
-	.c-meta-data__item {
+	.c-meta__item {
 		display: inline-block;
 		margin: 0;
 
-		& + .c-meta-data__item {
+		& + .c-meta__item {
 			margin-left: 1rem;
 		}
 	}
