--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -57,6 +57,7 @@
 		'components/carousel',
 		'components/heading',
 		'components/heading-feature',
+		'components/meta-data',
 		'components/link-list',
 		'components/carousel',
 		'components/breadcrumb',
