--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -621,6 +621,10 @@ html {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto; }
 
+@media only screen and (max-width: 799px) {
+  .o-page__content--has-sidebar .o-page__content__main + .o-page__content__sidebar {
+    margin-top: 3.4em; } }
+
 @media only screen and (min-width: 800px) {
   .o-page__content--has-sidebar .o-page__content__main {
     *zoom: 1;
@@ -2927,6 +2931,22 @@ img.mfp-img {
   font-weight: 700; }
 
 /* ===========================================================
+
+	# Meta data
+
+=========================================================== */
+.c-meta__item {
+  list-style: none;
+  margin: 0; }
+
+@media only screen and (min-width: 600px) {
+  .c-meta__item {
+    display: inline-block;
+    margin: 0; }
+    .c-meta__item + .c-meta__item {
+      margin-left: 1rem; } }
+
+/* ===========================================================
 	# Link list
 =========================================================== */
 .c-link-list {
@@ -3775,26 +3795,8 @@ img.mfp-img {
 
 =========================================================== */
 @media only screen and (max-width: 599px) {
-  .c-listing-card .c-listing-card__item {
-    *zoom: 1;
-    float: left;
-    clear: none;
-    text-align: inherit;
-    width: 48.5%;
-    margin-left: 0%;
-    margin-right: 3%; }
-    .c-listing-card .c-listing-card__item:before, .c-listing-card .c-listing-card__item:after {
-      content: '';
-      display: table; }
-    .c-listing-card .c-listing-card__item:after {
-      clear: both; }
-    .c-listing-card .c-listing-card__item:nth-child(2n) {
-      margin-right: 0%;
-      float: right; }
-    .c-listing-card .c-listing-card__item:nth-child(2n + 1) {
-      clear: both; }
-    .c-listing-card .c-listing-card__item + .c-listing-card .c-listing-card__item {
-      margin-top: 3.4em; } }
+  .c-listing-card .c-listing-card__item + .c-listing-card__item {
+    margin-top: 1.7em; } }
 
 @media only screen and (min-width: 600px) {
   .c-listing-card__item {
