Add cover carousel to home

--- a/_assets/sass/components/carousel.scss
+++ b/_assets/sass/components/carousel.scss
@@ -125,68 +125,68 @@
 		}
 	}
 
-	/* dots */
+}
 
-	.c-carousel__dots {
+/* dots */
+
+.c-carousel__dots {
+	position: relative;
+	list-style: none;
+	display: block;
+	text-align: center;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+
+	li {
 		position: relative;
-		list-style: none;
-		display: block;
-		text-align: center;
+		display: inline-block;
+		width: 2.1rem;
+		height: 2.1rem;
+		margin: 0 .5rem;
 		padding: 0;
-		margin: 0;
-		width: 100%;
+		cursor: pointer;
 
-		li {
-			position: relative;
-			display: inline-block;
-			width: 2.1rem;
-			height: 2.1rem;
-			margin: 0 .5rem;
-			padding: 0;
-			cursor: pointer;
-
-			&:before {
-				display: none !important;
-			}
-
-			&:hover,
-			&:focus,
-			&.slick-active {
-
-				button:before {
-					background-color: $pri;
-				}
-
-			}
-
+		&:before {
+			display: none !important;
 		}
 
-		button {
-			border: .2rem solid $pri;
-			background: transparent;
-			display: block;
-			height: 2.1rem;
-			width: 2.1rem;
-			outline: none;
-			line-height: 0;
-			font-size: 0;
-			color: transparent;
-			padding: .5rem;
-			cursor: pointer;
-			border-radius: 50%;
+		&:hover,
+		&:focus,
+		&.slick-active {
 
-			&:hover,
-			&:focus {
-				outline: none;
-			}
-		}
-
-		.slick-active {
-			button {
+			button:before {
 				background-color: $pri;
 			}
+
 		}
 
+	}
+
+	button {
+		border: .1rem solid $pri;
+		background: transparent;
+		display: block;
+		height: 1.5rem;
+		width: 1.5rem;
+		outline: none;
+		line-height: 0;
+		font-size: 0;
+		color: transparent;
+		padding: .5rem;
+		cursor: pointer;
+		border-radius: 50%;
+
+		&:hover,
+		&:focus {
+			outline: none;
+		}
+	}
+
+	.slick-active {
+		button {
+			background-color: $pri;
+		}
 	}
 
 }
@@ -247,12 +247,53 @@
 
 	}
 
+	.c-carousel--contain {
+
+		.c-carousel__dots {
+			position: absolute;
+			bottom: $line-height;
+			left: 0;
+			right: 0;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.slick-active button {
+			background-color: $white;
+		}
+
+		button {
+			border-color: $white;
+		}
+
+	}
+
+}
+
+@include respond-min( $mq-xx-large ) {
+
+	.c-carousel--contain {
+
+		.c-carousel--prev {
+			left: 6rem;
+		}
+		.c-carousel--next {
+			right: 6rem;
+		}
+
+		.c-carousel__dots {
+			bottom: $line-height * 2;
+
+
+		}
+
+	}
+
 }
 
 
 @include respond-min( $mq-xx-large + 60px ) {
-
-	.c-carouse--large,
+\
 	.c-carousel--cards {
 
 		.c-carousel--prev,
