Add initial cover to home and fix skip nav link

--- a/_templates/Master.cshtml
+++ b/_templates/Master.cshtml
@@ -6,7 +6,7 @@
 
 	var coverCarousel = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("coverCarousel");
 	var hasCarousel = coverCarousel != null && coverCarousel.Any();
-	var hasCover = Model.GetPropertyValue<IPublishedContent>("image") != null;
+	var hasCover = Model.GetPropertyValue<IPublishedContent>("coverImage") != null;
 
 	var hasHero = hasCarousel || hasCover;
 
