--- a/iCAN.Web/Views/ErrorPage.cshtml
+++ b/iCAN.Web/Views/ErrorPage.cshtml
@@ -4,6 +4,6 @@
     var headline = Model.GetPropertyValue<string>("headline", Model.Name);
 }
 
-<main class="o-page__inner u-clearfix" role="main">
+<main id="main" class="o-page__inner u-clearfix" role="main">
 	<h1>@headline</h1>
 </main>
