--- a/iCAN.Web/Views/GatewayPage.cshtml
+++ b/iCAN.Web/Views/GatewayPage.cshtml
@@ -8,7 +8,7 @@
 	var remainingPages = Model.Children().Where(x => !featuredPages.Contains(x));
 }
 
-<main class="o-page__inner u-clearfix" role="main">
+<main id="main" class="o-page__inner u-clearfix" role="main">
 	<h1>@Model.Name</h1>
     @if (featuredPages.Any()) {
         <h2>Featured</h2>
