--- a/iCAN.Web/Views/Search.cshtml
+++ b/iCAN.Web/Views/Search.cshtml
@@ -4,7 +4,7 @@
     var headline = Model.GetPropertyValue<string>("headline", Model.Name);
 }
 
-<main class="o-page__inner u-clearfix" role="main">
+<main id="main" class="o-page__inner u-clearfix" role="main">
 	<h1>@headline</h1>
 
     @Html.Partial("Forms/SearchForm")
