--- a/iCAN.Web/Views/Sitemap.cshtml
+++ b/iCAN.Web/Views/Sitemap.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="o-page__inner u-clearfix">
-	<main class="o-section o-wrap o-wrap--medium" role="main">
+	<main id="main" class="o-section o-wrap o-wrap--medium" role="main">
 		<h1>@headline</h1>
 		<div class="u-space-top">
 			@Html.Partial("~/Views/Partials/Components/Sitemap.cshtml")
